@@ -1,6 +1,12 @@
 2014-07-24  Tom Tromey  <tromey@redhat.com>
 	    Gary Benson  <gbenson@redhat.com>
 
+	* regcache.c: Include common-regcache.h.
+	(get_thread_regcache_for_ptid): New function.
+
+2014-07-24  Tom Tromey  <tromey@redhat.com>
+	    Gary Benson  <gbenson@redhat.com>
+
 	* target.c: Include target/symbol.h.
 	(target_look_up_symbol): New function.
 
